typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList8.ts.stderr
error: TS2369 {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList8.ts:2:14
  |
2 |  constructor(public p1:string); // ERROR
  |              ^^^^^^

error: TS2369 {
    span: Span {
        lo: BytePos(
            75,
        ),
        hi: BytePos(
            82,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList8.ts:3:14
  |
3 |  constructor(private p2:number); // ERROR
  |              ^^^^^^^

error: TS2369 {
    span: Span {
        lo: BytePos(
            118,
        ),
        hi: BytePos(
            124,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList8.ts:4:14
  |
4 |  constructor(public p3:any); // ERROR
  |              ^^^^^^

